stop horizontal scrolling

--- a/static/css/overwrite.css
+++ b/static/css/overwrite.css
@@ -66,3 +66,8 @@ form.search {
 button.navbar-toggler {
     margin-right: 5px;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
